# hypertransformer-pytorch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-test.yml
hypertransformer/pytorch/: README.md  pyproject.toml
hypertransformer/tf/: README.md  evaluate_model.py  pyproject.toml  train.py
hypertransformer/tf/core/: common.py  datasets.py  datasets_test.py  evaluation_lib.py  feature_extractors.py  layerwise.py  layerwise_defs.py  layerwise_test.py  train_lib.py  train_lib_test.py  transformer_test.py  util.py  util_test.py
hypertransformer/tf/scripts/: miniimagenet_1shot_v1.sh  omniglot_1shot_v1.sh  omniglot_5shot_v1.sh  tieredimagenet_1shot_v1.sh
hypertransformer/tf/utils/: README.md  cache_miniimagenet.py  cache_tieredimagenet.py
tf/: README.md  pyproject.toml
tf/hypertransformer/: common_flags.py  evaluate.py  evaluate_model.py  train.py
tf/hypertransformer/core/: common.py  common_ht.py  datasets.py  datasets_test.py  evaluation_lib.py  feature_extractors.py  layerwise.py  layerwise_defs.py  layerwise_test.py  train_lib.py  train_lib_test.py  transformer.py  transformer_test.py  util.py  util_test.py
tf/hypertransformer/utils/: README.md  cache_miniimagenet.py  cache_omniglot.ipynb
tf/scripts/: miniimagenet_1shot_v1.sh  miniimagenet_5shot_v1.sh  omniglot_1shot_v1.sh  omniglot_5shot_v1.sh  tieredimagenet_1shot_v1.sh
torch/: .gitignore  README.md  pyproject.toml
torch/hypertransformer/: common_flags.py  eval_model_flags.py  evaluate.py  evaluate_model.py  train.py
torch/hypertransformer/core/: common.py  common_ht.py  datasets.py  evaluation_lib.py  feature_extractors.py  layerwise.py  layerwise_defs.py  train_lib.py  transformer.py  util.py
torch/hypertransformer/scripts/: miniimagenet_1shot_v1.sh  miniimagenet_5shot_v1.sh
torch/hypertransformer/utils/: README.md  cache_miniimagenet.py  cache_tieredimagenet.py
torch/scripts/: .gitignore  miniimagenet_1shot_v1-eval.sh  miniimagenet_1shot_v1.sh  miniimagenet_5shot_v1.sh  omniglot_1shot_v1.sh  omniglot_5shot_v1.sh
torch/tests/: REAME.md  test_train.py
torch/tests/core/: test_datasets.py  test_feature_extractors.py  test_layerwise.py  test_train_lib.py  test_transformer.py  test_util.py
