[tool.poetry]
name = "hypertransformer"
version = "1.1.4"
description = "Tensorflow implementation of (Continual) HyperTransformer."
authors = ["zzz <imzqqq@hotmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Communications :: Tor",
]
# package-mode = false

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
# priority = "supplemental"
[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"
[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<4"
absl-py = "^2.3.1"
dm-tree = "^0.1.9"
numpy = "^2.1.3"
keras-cv = "^0.9.0"
tensorflow = {extras = ["and-cuda"], version = "^2.19.0"}
tensorflow-datasets = "^4.9.9"
tf-slim = "^1.1.0"
tensorrt = { version = "^10.14.1.48.post1", optional = true }
# `pip install --extra-index-url https://pypi.nvidia.com/ tensorrt-cu13-libs`
tensorrt-cu13-libs = { version = "^10.14.1", source = "nvidia", optional = true }
opencv-python = "^4.12.0.88"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
