[tool.poetry]
name = "hypertransformer"
version = "1.1.5"
description = "Tensorflow implementation of (Continual) HyperTransformer."
authors = ["zzz <imzqqq@hotmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: CS :: CV",
]
# package-mode = false

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
# priority = "supplemental"
[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"
[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<3.12" # `dm-tree` requires <=3.11 to be compatible with numpy
absl-py = "^2.3.1"
dm-tree = "^0.1.9"
opencv-python = "^4.11.0.86"
numpy = "^1.26.4" # Because tensorflow[and-cuda] (2.15.1) depends on numpy (>=1.23.5,<2.0.0)
tensorflow = {extras = ["and-cuda"], version = "2.15.1"} # `tf.layers.* works` will NOT on versions further
tensorboard = "^2.15.2"
types-tensorflow = "^2.18.0.20251008"
tensorflow-datasets = "^4.9.9"
tf-slim = "^1.1.0"
tensorrt = { version = "^10.14.1.48.post1", optional = true }
# `pip install --extra-index-url https://pypi.nvidia.com/ tensorrt-cu13-libs`
tensorrt-cu13-libs = { version = "^10.14.1", source = "nvidia", optional = true }
pandas = "^2.3.3"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
